Добавляет предварительную версию со сменой цветовой схемы

--- a/source/activity-discussions.html
+++ b/source/activity-discussions.html
@@ -31,7 +31,7 @@
                 </div>
               </div>
               <div class="discussion__content">
-                <a class="discussion__text" href="#">
+                <a class="discussion__text link link--black" href="#">
                   Оценка качества услуг учреждений сферы государственной молодежной политики
                 </a>
                 <button type="button" class="discussion__button-star button-star">
@@ -53,7 +53,7 @@
                 </div>
               </div>
               <div class="discussion__content">
-                <a class="discussion__text" href="#">
+                <a class="discussion__text link link--black" href="#">
                   Развитие животноводства в Тульской области
                 </a>
                 <button type="button" class="discussion__button-star button-star">
@@ -75,7 +75,7 @@
                 </div>
               </div>
               <div class="discussion__content">
-                <a class="discussion__text" href="#">
+                <a class="discussion__text link link--black" href="#">
                   Реконструкция моста через р. Дон на км 11+600 автомобильной дороги Новомосковское кольцо в Узловском районе Тульской области
                 </a>
                 <button type="button" class="discussion__button-star button-star">
@@ -97,7 +97,7 @@
                 </div>
               </div>
               <div class="discussion__content">
-                <a class="discussion__text" href="#">
+                <a class="discussion__text link link--black" href="#">
                   Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад»
                 </a>
                 <button type="button" class="discussion__button-star button-star">
@@ -119,7 +119,7 @@
                 </div>
               </div>
               <div class="discussion__content">
-                <a class="discussion__text" href="#">
+                <a class="discussion__text link link--black" href="#">
                   Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева"
                 </a>
                 <button type="button" class="discussion__button-star button-star">
@@ -141,7 +141,7 @@
                   </div>
                 </div>
                 <div class="discussion__content">
-                  <a class="discussion__text" href="#">
+                  <a class="discussion__text link link--black" href="#">
                     Оценка качества услуг учреждений сферы государственной молодежной политики
                   </a>
                   <button type="button" class="discussion__button-star button-star">
@@ -163,7 +163,7 @@
                   </div>
                 </div>
                 <div class="discussion__content">
-                  <a class="discussion__text" href="#">
+                  <a class="discussion__text link link--black" href="#">
                     Развитие животноводства в Тульской области
                   </a>
                   <button type="button" class="discussion__button-star button-star">
@@ -185,7 +185,7 @@
                   </div>
                 </div>
                 <div class="discussion__content">
-                  <a class="discussion__text" href="#">
+                  <a class="discussion__text link link--black" href="#">
                     Реконструкция моста через р. Дон на км 11+600 автомобильной дороги Новомосковское кольцо в Узловском районе Тульской области
                   </a>
                   <button type="button" class="discussion__button-star button-star">
@@ -207,7 +207,7 @@
                   </div>
                 </div>
                 <div class="discussion__content">
-                  <a class="discussion__text" href="#">
+                  <a class="discussion__text link link--black" href="#">
                     Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад»
                   </a>
                   <button type="button" class="discussion__button-star button-star">
@@ -229,7 +229,7 @@
                   </div>
                 </div>
                 <div class="discussion__content">
-                  <a class="discussion__text" href="#">
+                  <a class="discussion__text link link--black" href="#">
                     Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева"
                   </a>
                   <button type="button" class="discussion__button-star button-star">
@@ -251,7 +251,7 @@
                     </div>
                   </div>
                   <div class="discussion__content">
-                    <a class="discussion__text" href="#">
+                    <a class="discussion__text link link--black" href="#">
                       Оценка качества услуг учреждений сферы государственной молодежной политики
                     </a>
                     <button type="button" class="discussion__button-star button-star">
@@ -273,7 +273,7 @@
                     </div>
                   </div>
                   <div class="discussion__content">
-                    <a class="discussion__text" href="#">
+                    <a class="discussion__text link link--black" href="#">
                       Развитие животноводства в Тульской области
                     </a>
                     <button type="button" class="discussion__button-star button-star">
@@ -295,7 +295,7 @@
                     </div>
                   </div>
                   <div class="discussion__content">
-                    <a class="discussion__text" href="#">
+                    <a class="discussion__text link link--black" href="#">
                       Реконструкция моста через р. Дон на км 11+600 автомобильной дороги Новомосковское кольцо в Узловском районе Тульской области
                     </a>
                     <button type="button" class="discussion__button-star button-star">
@@ -317,7 +317,7 @@
                     </div>
                   </div>
                   <div class="discussion__content">
-                    <a class="discussion__text" href="#">
+                    <a class="discussion__text link link--black" href="#">
                       Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад»
                     </a>
                     <button type="button" class="discussion__button-star button-star">
@@ -339,7 +339,7 @@
                     </div>
                   </div>
                   <div class="discussion__content">
-                    <a class="discussion__text" href="#">
+                    <a class="discussion__text link link--black" href="#">
                       Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева"
                     </a>
                     <button type="button" class="discussion__button-star button-star">
