--- a/source/discussion-item.html
+++ b/source/discussion-item.html
@@ -182,7 +182,7 @@
           <div class="answers__item">
             <div class="answers__discussion-col text-hidden">
               <div class="answers__top-wrapper">
-                <a href="#" class="answers__look-link">
+                <a href="#" class="answers__look-link link link--grey">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-eye"></use>
                   </svg>
@@ -198,7 +198,7 @@
               </div>
               <p class="text-hidden__container">Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</p>
               <div class="answers__button-wrapper">
-                <button type="button" class="answers__button text-hidden__btn">
+                <button type="button" class="answers__button link link--blue text-hidden__btn">
                   <span>Развернуть</span>
                   <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
@@ -216,7 +216,7 @@
           <div class="answers__item">
             <div class="answers__discussion-col">
               <div class="answers__top-wrapper">
-                <a href="#" class="answers__look-link">
+                <a href="#" class="answers__look-link link link--grey">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-eye"></use>
                   </svg>
@@ -242,7 +242,7 @@
           <div class="answers__item">
             <div class="answers__discussion-col text-hidden">
               <div class="answers__top-wrapper">
-                <a href="#" class="answers__look-link">
+                <a href="#" class="answers__look-link link link--grey">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-eye"></use>
                   </svg>
@@ -258,7 +258,7 @@
               </div>
               <p class="text-hidden__container">Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого вследствии этого использование этого текста в качестве визуального заполнителя макета. Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</p>
               <div class="answers__button-wrapper">
-                <button type="button" class="answers__button text-hidden__btn">
+                <button type="button" class="answers__button link link--blue text-hidden__btn">
                   <span>Развернуть</span>
                   <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
@@ -276,7 +276,7 @@
           <div class="answers__item">
             <div class="answers__discussion-col text-hidden">
               <div class="answers__top-wrapper">
-                <a href="#" class="answers__look-link">
+                <a href="#" class="answers__look-link link link--grey">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-eye"></use>
                   </svg>
@@ -285,7 +285,7 @@
               </div>
               <p class="text-hidden__container">Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</p>
               <div class="answers__button-wrapper">
-                <button type="button" class="answers__button text-hidden__btn">
+                <button type="button" class="answers__button link link--blue text-hidden__btn">
                   <span>Развернуть</span>
                   <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
@@ -303,7 +303,7 @@
           <div class="answers__item">
             <div class="answers__discussion-col">
               <div class="answers__top-wrapper">
-                <a href="#" class="answers__look-link">
+                <a href="#" class="answers__look-link link link--grey">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-eye"></use>
                   </svg>
@@ -322,7 +322,7 @@
           <div class="answers__item">
             <div class="answers__discussion-col text-hidden">
               <div class="answers__top-wrapper">
-                <a href="#" class="answers__look-link">
+                <a href="#" class="answers__look-link link link--grey">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-eye"></use>
                   </svg>
@@ -331,7 +331,7 @@
               </div>
               <p class="text-hidden__container">Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</p>
               <div class="answers__button-wrapper">
-                <button type="button" class="answers__button text-hidden__btn">
+                <button type="button" class="answers__button link link--blue text-hidden__btn">
                   <span>Развернуть</span>
                   <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
@@ -386,9 +386,15 @@
           </div>
           <ul class="poll-page__doc-list">
             <li class="poll-page__doc-item">
-              <a class="poll-page__doc-wrap" href="#" download>
-                <div class="poll-page__doc-name">Файл с ответами</div>
-                <span class="poll-page__doc-size">3,2 мб</span>
+              <a class="file-item" href="#" download>
+                <svg width="24" height="24">
+                  <use xlink:href="img/sprite.svg#icon-doc-odt"></use>
+                </svg>
+
+                <p class="file-item__info">
+                  <span class="file-item__name">Файл с ответами</span>
+                  <span class="file-item__size">3,2 мб</span>
+                </p>
               </a>
             </li>
           </ul>
@@ -564,7 +570,7 @@
                 </div>
                 <p class="your-comment__text text-hidden__container text-hidden__container--comment">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</p>
                 <div class="answers__button-wrapper answers__button-wrapper--blue-gradient">
-                  <button type="button" class="answers__button text-hidden__btn">
+                  <button type="button" class="answers__button link link--blue text-hidden__btn">
                     <span>Развернуть</span>
                     <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
@@ -635,7 +641,7 @@
                   </div>
                   <p class="your-comment__text text-hidden__container text-hidden__container--comment">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</p>
                   <div class="answers__button-wrapper answers__button-wrapper--blue-gradient">
-                    <button type="button" class="answers__button text-hidden__btn">
+                    <button type="button" class="answers__button link link--blue text-hidden__btn">
                       <span>Развернуть</span>
                       <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
