--- a/source/discussions.html
+++ b/source/discussions.html
@@ -41,7 +41,7 @@
               </div>
             </div>
             <div class="discussion__content">
-              <a class="discussion__text" href="#">
+              <a class="discussion__text link link--black" href="#">
                 Оценка качества услуг учреждений сферы государственной молодежной политики
               </a>
               <button type="button" class="discussion__button-star button-star">
@@ -63,7 +63,7 @@
               </div>
             </div>
             <div class="discussion__content">
-              <a class="discussion__text" href="#">
+              <a class="discussion__text link link--black" href="#">
                 Развитие животноводства в Тульской области
               </a>
               <button type="button" class="discussion__button-star button-star">
@@ -85,7 +85,7 @@
               </div>
             </div>
             <div class="discussion__content">
-              <a class="discussion__text" href="#">
+              <a class="discussion__text link link--black" href="#">
                 Реконструкция моста через р. Дон на км 11+600 автомобильной дороги Новомосковское кольцо в Узловском районе Тульской области
               </a>
               <button type="button" class="discussion__button-star button-star">
@@ -107,7 +107,7 @@
               </div>
             </div>
             <div class="discussion__content">
-              <a class="discussion__text" href="#">
+              <a class="discussion__text link link--black" href="#">
                 Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад»
               </a>
               <button type="button" class="discussion__button-star button-star">
@@ -129,7 +129,7 @@
               </div>
             </div>
             <div class="discussion__content">
-              <a class="discussion__text" href="#">
+              <a class="discussion__text link link--black" href="#">
                 Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева"
               </a>
               <button type="button" class="discussion__button-star button-star">
@@ -151,7 +151,7 @@
                 </div>
               </div>
               <div class="discussion__content">
-                <a class="discussion__text" href="#">
+                <a class="discussion__text link link--black" href="#">
                   Оценка качества услуг учреждений сферы государственной молодежной политики
                 </a>
                 <button type="button" class="discussion__button-star button-star">
@@ -173,7 +173,7 @@
                 </div>
               </div>
               <div class="discussion__content">
-                <a class="discussion__text" href="#">
+                <a class="discussion__text link link--black" href="#">
                   Развитие животноводства в Тульской области
                 </a>
                 <button type="button" class="discussion__button-star button-star">
@@ -195,7 +195,7 @@
                 </div>
               </div>
               <div class="discussion__content">
-                <a class="discussion__text" href="#">
+                <a class="discussion__text link link--black" href="#">
                   Реконструкция моста через р. Дон на км 11+600 автомобильной дороги Новомосковское кольцо в Узловском районе Тульской области
                 </a>
                 <button type="button" class="discussion__button-star button-star">
@@ -217,7 +217,7 @@
                 </div>
               </div>
               <div class="discussion__content">
-                <a class="discussion__text" href="#">
+                <a class="discussion__text link link--black" href="#">
                   Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад»
                 </a>
                 <button type="button" class="discussion__button-star button-star">
@@ -239,7 +239,7 @@
                 </div>
               </div>
               <div class="discussion__content">
-                <a class="discussion__text" href="#">
+                <a class="discussion__text link link--black" href="#">
                   Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева"
                 </a>
                 <button type="button" class="discussion__button-star button-star">
@@ -261,7 +261,7 @@
                   </div>
                 </div>
                 <div class="discussion__content">
-                  <a class="discussion__text" href="#">
+                  <a class="discussion__text link link--black" href="#">
                     Оценка качества услуг учреждений сферы государственной молодежной политики
                   </a>
                   <button type="button" class="discussion__button-star button-star">
@@ -283,7 +283,7 @@
                   </div>
                 </div>
                 <div class="discussion__content">
-                  <a class="discussion__text" href="#">
+                  <a class="discussion__text link link--black" href="#">
                     Развитие животноводства в Тульской области
                   </a>
                   <button type="button" class="discussion__button-star button-star">
@@ -305,7 +305,7 @@
                   </div>
                 </div>
                 <div class="discussion__content">
-                  <a class="discussion__text" href="#">
+                  <a class="discussion__text link link--black" href="#">
                     Реконструкция моста через р. Дон на км 11+600 автомобильной дороги Новомосковское кольцо в Узловском районе Тульской области
                   </a>
                   <button type="button" class="discussion__button-star button-star">
@@ -327,7 +327,7 @@
                   </div>
                 </div>
                 <div class="discussion__content">
-                  <a class="discussion__text" href="#">
+                  <a class="discussion__text link link--black" href="#">
                     Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад»
                   </a>
                   <button type="button" class="discussion__button-star button-star">
@@ -349,7 +349,7 @@
                   </div>
                 </div>
                 <div class="discussion__content">
-                  <a class="discussion__text" href="#">
+                  <a class="discussion__text link link--black" href="#">
                     Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева"
                   </a>
                   <button type="button" class="discussion__button-star button-star">
