--- a/source/poll-page.html
+++ b/source/poll-page.html
@@ -46,14 +46,16 @@
               Согласно большинству источников Lorem ipsum представляет собой отрывок одного из трактатов Цицерона и его корни уходят в 45 век до н. э.
             </p>
           </div>
-          <ul class="poll-page__doc-list">
-            <li class="poll-page__doc-item">
-              <a class="poll-page__doc-wrap" href="#" download>
-                <div class="poll-page__doc-name">Рыбным текстом называется текст</div>
-                <span class="poll-page__doc-size">3,2 мб</span>
-              </a>
-            </li>
-          </ul>
+          <a class="file-item" href="#" download>
+            <svg width="24" height="24">
+              <use xlink:href="img/sprite.svg#icon-doc-odt"></use>
+            </svg>
+
+            <p class="file-item__info">
+              <span class="file-item__name">Рыбным текстом называется текст</span>
+              <span class="file-item__size">3,2 мб</span>
+            </p>
+          </a>
           <div class="poll-page__form form">
             <form action="#">
               <div class="poll-page__form-section form__section">
