--- a/source/main-page.html
+++ b/source/main-page.html
@@ -11,7 +11,7 @@
       <h1 class="visually-hidden">Главная страница</h1>
       <div class="news-notice">
         <div class="news-notice__wrap">
-          <div class="news-notice__news section">
+          <section class="news-notice__news section">
             <div class="section__head">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <use xlink:href="img/sprite.svg#icon-news"></use>
@@ -44,8 +44,8 @@
                 </p>
               </li>
             </ul>
-          </div>
-          <div class="news-notice__notice section">
+          </section>
+          <section class="news-notice__notice section">
             <div class="section__head">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <use xlink:href="img/sprite.svg#icon-notification"></use>
@@ -78,7 +78,7 @@
                 </p>
               </li>
             </ul>
-          </div>
+          </section>
         </div>
         <a href="#" class="news-notice__button button button--light-blue">
           <span>ПОСМОТРЕТЬ ВСЕ</span>
@@ -231,9 +231,9 @@
           <p class="project__info-text">
             Голосование завершено, победители указаны в соответствующих категориях
           </p>
-          <a class="project__info-doc" href="#">
-            <div class="project__doc-name" href="#" download>Протокол</div>
-            <div class="project__doc-size">3,2 МБ</div>
+          <a class="project__info-doc document document--doc" href="#" download>
+            <span class="document__name">Протокол</span>
+            <span class="document__size">3,2 МБ</span>
           </a>
         </div>
         <ul class="project__list js_short_list">
