--- a/source/projects-winners.html
+++ b/source/projects-winners.html
@@ -53,15 +53,9 @@
                 <p class="vote-end__text">Голосование завершено, победители указаны в&nbsp;соответствующих категориях</p>
               </div>
 
-              <a class="vote-end__protocol" href="#">
-                <svg class="vote-end__protocol-icon" width="24" height="24">
-                  <use xlink:href="img/sprite.svg#icon-doc-doc"></use>
-                </svg>
-
-                <span class="vote-end__protocol-text">
-                  Протокол
-                  <span class="vote-end__protocol-size">3,2 мб</span>
-                </span>
+              <a class="vote-end__doc document document--doc" href="#" download>
+                <span class="document__name">Протокол</span>
+                <span class="document__size">3,2 МБ</span>
               </a>
             </div>
 
