Правит версию для слабовидящих

--- a/source/projects-winners.html
+++ b/source/projects-winners.html
@@ -68,16 +68,12 @@
 
                   <p class="counter__item">
                     <span class="counter__item-caption">Региональные</span>
-                    <span class="counter__item-avaliable">1</span>
-                    из
-                    <span class="counter__item-total">2</span>
+                    <span class="counter__item-avaliable">1</span>&nbsp;из&nbsp;<span class="counter__item-total">2</span>
                   </p>
 
                   <p class="counter__item">
                     <span class="counter__item-caption">Местные</span>
-                    <span class="counter__item-avaliable">3</span>
-                    из
-                    <span class="counter__item-total">4</span>
+                    <span class="counter__item-avaliable">3</span>&nbsp;из&nbsp;<span class="counter__item-total">4</span>
                   </p>
                 </div>
               </div>
