Вносит мелкие правки

--- a/source/project-page.html
+++ b/source/project-page.html
@@ -304,7 +304,7 @@
               </div>
             </div>
 
-            <iframe src="https://yandex.ru/map-widget/v1/-/CGs-4Gng" width="740" height="400" allowfullscreen="true"></iframe>
+            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A632dc64482e20035a9e82717af6071fd69e61f588fe2400013fa13d65e070cb6&amp;source=constructor" width="740" height="400"></iframe>
 
             <ul>
               <li><strong>Протяженность</strong> — 615 м</li>
