--- a/source/projects-against.html
+++ b/source/projects-against.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <include src="source/components/head.html"></include>
 
-  <body>
+  <body class="page-body">
     <include src="source/components/special-popup.html"></include>
 
     <include src="source/components/header.html"></include>
