Объединяет блоки с сообщениями и документами

--- a/source/poll-page-finished.html
+++ b/source/poll-page-finished.html
@@ -54,8 +54,14 @@
             </p>
           </a>
 
-          <div class="poll-page__finish">
-            Ведется работа с полученными комментариями, результаты будут опубликованы позже
+          <div class="poll-page__finish status-info status-info--accent">
+            <div class="status-info__text-group">
+              <svg width="24" height="24">
+                <use xlink:href="img/sprite.svg#icon-clock"></use>
+              </svg>
+
+              <p class="status-info__text">Ведется работа с полученными комментариями, результаты будут опубликованы позже</p>
+            </div>
           </div>
 
           <a href="#" class="button button--light-blue poll-page__button-back">
