--- a/source/projects-winners.html
+++ b/source/projects-winners.html
@@ -44,18 +44,24 @@
               </div>
             </div>
 
-            <div class="projects__vote-end vote-end">
-              <div class="vote-end__text-group">
+            <div class="projects__vote-end status-info">
+              <div class="status-info__text-group">
                 <svg width="24" height="19">
                   <use xlink:href="img/sprite.svg#icon-tick"></use>
                 </svg>
 
-                <p class="vote-end__text">Голосование завершено, победители указаны в&nbsp;соответствующих категориях</p>
+                <p class="status-info__text">Голосование завершено, победители указаны в&nbsp;соответствующих категориях</p>
               </div>
 
-              <a class="vote-end__doc document document--doc" href="#" download>
-                <span class="document__name">Протокол</span>
-                <span class="document__size">3,2 МБ</span>
+              <a class="status-info__file file-item file-item--small file-item--white" href="#" download>
+                <svg width="24" height="24">
+                  <use xlink:href="img/sprite.svg#icon-doc-doc"></use>
+                </svg>
+
+                <p class="file-item__info">
+                  <span class="file-item__name">Протокол</span>
+                  <span class="file-item__size">3,2 мб</span>
+                </p>
               </a>
             </div>
 
