--- a/source/index.html
+++ b/source/index.html
@@ -14,6 +14,9 @@
             <a href="main-page.html" target="_blank">Главная</a>
           </li>
           <li>
+            <a href="main-empty.html" target="_blank">Главная пустая</a>
+          </li>
+          <li>
             <a href="page-404.html" target="_blank">404</a>
           </li>
           <br>
