--- a/source/project-page.html
+++ b/source/project-page.html
@@ -234,7 +234,7 @@
 
               <a class="file-item" href="#" download>
                 <svg width="24" height="24">
-                  <use xlink:href="img/sprite.svg#icon-doc-odt"></use>
+                  <use xlink:href="img/sprite.svg#icon-doc-pdf"></use>
                 </svg>
 
                 <p class="file-item__info">
@@ -361,7 +361,7 @@
 
               <a class="file-item" href="#" download>
                 <svg width="24" height="24">
-                  <use xlink:href="img/sprite.svg#icon-doc-odt"></use>
+                  <use xlink:href="img/sprite.svg#icon-doc-pdf"></use>
                 </svg>
 
                 <p class="file-item__info">
@@ -372,7 +372,7 @@
 
               <a class="file-item" href="#" download>
                 <svg width="24" height="24">
-                  <use xlink:href="img/sprite.svg#icon-doc-doc"></use>
+                  <use xlink:href="img/sprite.svg#icon-doc-pdf"></use>
                 </svg>
 
                 <p class="file-item__info">
