--- a/source/activity-surveys.html
+++ b/source/activity-surveys.html
@@ -30,6 +30,7 @@
             <a href="activity-partners.html" class="activity-tabs__link">На сторонних ресурсах</a>
           </li>
         </ul>
+        <div class="container activity-tabs__bottom"></div>
       </div>
 
       <div class="container">
