--- a/source/projects.html
+++ b/source/projects.html
@@ -152,7 +152,7 @@
           </article>
 
           <article class="project-item project-item--disabled">
-            <a class="project-item__link">
+            <a class="project-item__link" href="#">
               <h2 class="project-item__title">Возрождение вечерних школ</h2>
 
               <p class="project-item__expire">
@@ -242,7 +242,7 @@
           </article>
 
           <article class="project-item project-item--disabled">
-            <a class="project-item__link">
+            <a class="project-item__link" href="#">
               <h2 class="project-item__title">Возрождение вечерних школ</h2>
 
               <p class="project-item__expire">
@@ -332,7 +332,7 @@
           </article>
 
           <article class="project-item project-item--disabled">
-            <a class="project-item__link">
+            <a class="project-item__link" href="#">
               <h2 class="project-item__title">Возрождение вечерних школ</h2>
 
               <p class="project-item__expire">
