Добавляет js-классы

--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -87,7 +87,7 @@
                   <!-- <span>5</span> -->
                   <span>10</span>
                 </div>
-                <div id="poll-range"></div>
+                <div class="js-poll-range" id="poll-range"></div>
                 <div class="form-range__description">
                   <span>очень плохо</span>
                   <span>очень хорошо</span>
