--- a/source/main-page.html
+++ b/source/main-page.html
@@ -96,7 +96,7 @@
           <div class="social__text">
             <p class="social__text-inner">Вы можете подписаться на самые важные<br>и актуальные обновления проектов и событий</p>
           </div>
-          <a class="social__link social__link--subscribe link-arrow" href="#">
+          <a class="social__link social__link--subscribe js-social__link--subscribe link-arrow" href="#">
             <span class="social__link-text">Подписаться</span>
             <svg class="social__link--subscribe-icon" width="16" height="13" viewBox="0 0 16 13">
               <use xlink:href="img/sprite.svg#icon-tick"></use>
