--- a/source/activity-projects.html
+++ b/source/activity-projects.html
@@ -35,7 +35,7 @@
 
       <div class="container">
 
-        <div class="projects-list">
+        <div class="projects-list js-projects-list">
           <article class="project-item">
             <a class="project-item__link" href="#">
               <h2 class="project-item__title">Обязать контролеров проверять как пассажиров так и перевозчиков</h2>
