--- a/source/comment-popup.html
+++ b/source/comment-popup.html
@@ -11,13 +11,13 @@
       <div class="container">
         <ul>
           <li>
-            <a href="#" data-target="comment-add">Добавить комментарий</a>
+            <a class="js-comment-add" href="#">Добавить комментарий</a>
           </li>
           <li>
-            <a href="#" data-target="comment-edit">Ваш комментарий - редактировать</a>
+            <a class="js-comment-edit" href="#">Ваш комментарий - редактировать</a>
           </li>
           <li>
-            <a href="#" data-target="comment-your">Ваш комментарий</a>
+            <a class="js-comment-your" href="#">Ваш комментарий</a>
           </li>
         </ul>
       </div>
@@ -26,13 +26,13 @@
     <include src="source/components/footer.html"></include>
     <include src="source/components/up-btn.html"></include>
 
-    <div class="comment-popup comment-popup--add popup">
+    <div class="comment-popup comment-popup--add js-comment-popup--add popup js-popup">
       <div class="comment-popup__container popup__container">
-        <div class="popup__overlay"></div>
+        <div class="popup__overlay js-popup__overlay"></div>
 
         <div class="comment-popup__content popup__content">
           <div class="popup__bar popup__bar--top">
-            <button class="popup__close-btn" type="button">
+            <button class="popup__close-btn js-popup__close-btn" type="button">
               <span class="visually-hidden">Закрыть</span>
               <svg width="16" height="16">
                 <use xlink:href="img/sprite.svg#icon-cross"></use>
@@ -85,13 +85,13 @@
       </div>
     </div>
 
-    <div class="comment-popup comment-popup--edit popup">
+    <div class="comment-popup comment-popup--edit js-comment-popup--edit popup js-popup">
       <div class="comment-popup__container popup__container">
-        <div class="popup__overlay"></div>
+        <div class="popup__overlay js-popup__overlay"></div>
 
         <div class="comment-popup__content popup__content">
           <div class="popup__bar popup__bar--top">
-            <button class="popup__close-btn" type="button">
+            <button class="popup__close-btn js-popup__close-btn" type="button">
               <span class="visually-hidden">Закрыть</span>
               <svg width="16" height="16">
                 <use xlink:href="img/sprite.svg#icon-cross"></use>
@@ -103,7 +103,7 @@
             <div class="your-comment__img-wrapper">
               <img src="img/comments-img.jpg" width="264" height="389" alt="описание картинки">
             </div>
-            <div class="your-comment__content text-hidden">
+            <div class="your-comment__content text-hidden js-text-hidden">
               <div class="your-comment__top-wrapper">
                 <h2 class="your-comment__title">Ваш комментарий:</h2>
                 <div class="your-comment__actions">
@@ -125,7 +125,7 @@
               <p class="your-comment__text text-hidden__container text-hidden__container--comment">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.
               </p>
               <div class="answers__button-wrapper answers__button-wrapper--blue-gradient">
-                <button type="button" class="answers__button link link--blue text-hidden__btn">
+                <button type="button" class="answers__button link link--blue text-hidden__btn js-text-hidden__btn">
                   <span>Развернуть</span>
                   <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
@@ -172,13 +172,13 @@
       </div>
     </div>
 
-    <div class="comment-popup comment-popup--your popup">
+    <div class="comment-popup comment-popup--your js-comment-popup--your popup js-popup">
         <div class="comment-popup__container popup__container">
-          <div class="popup__overlay"></div>
+          <div class="popup__overlay js-popup__overlay"></div>
 
           <div class="comment-popup__content popup__content">
             <div class="popup__bar popup__bar--top">
-              <button class="popup__close-btn" type="button">
+              <button class="popup__close-btn js-popup__close-btn" type="button">
                 <span class="visually-hidden">Закрыть</span>
                 <svg width="16" height="16">
                   <use xlink:href="img/sprite.svg#icon-cross"></use>
@@ -190,13 +190,13 @@
               <div class="your-comment__img-wrapper">
                 <img src="img/comments-img.jpg" width="264" height="389" alt="описание картинки">
               </div>
-              <div class="your-comment__content text-hidden">
+              <div class="your-comment__content text-hidden js-text-hidden">
                 <div class="your-comment__top-wrapper">
                   <h2 class="your-comment__title">Ваш комментарий:</h2>
                 </div>
                 <p class="your-comment__text text-hidden__container text-hidden__container--comment">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</p>
                 <div class="answers__button-wrapper answers__button-wrapper--blue-gradient">
-                  <button type="button" class="answers__button link link--blue text-hidden__btn">
+                  <button type="button" class="answers__button link link--blue text-hidden__btn js-text-hidden__btn">
                     <span>Развернуть</span>
                     <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
