--- a/source/projects-winners.html
+++ b/source/projects-winners.html
@@ -11,7 +11,7 @@
       <div class="container">
         <include src="source/components/back-btn.html"></include>
 
-        <div class="projects__filter filter">
+        <div class="projects__filter filter js-filter">
           <form action="#" method="post">
             <div class="filter__header">
               <h1 class="filter__header-item">Проекты на голосовании&nbsp;</h1>
@@ -65,7 +65,7 @@
               </a>
             </div>
 
-            <button class="filter__open-btn button button--light-blue" type="button">Фильтры</button>
+            <button class="filter__open-btn js-filter__open-btn button button--light-blue" type="button">Фильтры</button>
 
             <div class="filter__body">
               <div class="projects__counter counter counter--hidden">
@@ -96,7 +96,7 @@
                     <label for="filter-location-local">Местные</label>
                   </div>
 
-                  <div class="filter__item filter__item--vote filter-vote form-select">
+                  <div class="filter__item filter__item--vote filter-vote js-filter-vote form-select">
                     <select name="vote-select" id="vote-select">
                       <option data-placeholder="true"></option>
                       <option value="За">За</option>
@@ -117,7 +117,7 @@
           </form>
         </div>
 
-        <div class="projects-list">
+        <div class="projects-list js-projects-list">
           <article class="project-item project-item--win">
             <a class="project-item__link" href="#">
               <h2 class="project-item__title">Обязать контролеров проверять как пассажиров так и перевозчиков</h2>
