Вносит изменения для табов

--- a/source/activity-partners.html
+++ b/source/activity-partners.html
@@ -26,8 +26,8 @@
           <li class="activity-tabs__item">
             <a href="activity-surveys.html" class="activity-tabs__link">Опросы</a>
           </li>
-          <li class="activity-tabs__item">
-            <a href="#" class="activity-tabs__link activity-tabs__link--active">На сторонних ресурсах</a>
+          <li class="activity-tabs__item activity-tabs__item--active">
+            <a href="#" class="activity-tabs__link">На сторонних ресурсах</a>
           </li>
         </ul>
         <div class="container activity-tabs__bottom"></div>
