--- a/source/activity-projects.html
+++ b/source/activity-projects.html
@@ -20,8 +20,8 @@
           <li class="activity-tabs__item">
             <a href="activity-discussions.html" class="activity-tabs__link">Обсуждения</a>
           </li>
-          <li class="activity-tabs__item">
-            <a href="#" class="activity-tabs__link activity-tabs__link--active">Проекты</a>
+          <li class="activity-tabs__item activity-tabs__item--active">
+            <a href="#" class="activity-tabs__link">Проекты</a>
           </li>
           <li class="activity-tabs__item">
             <a href="activity-surveys.html" class="activity-tabs__link">Опросы</a>
