--- a/source/activity-discussions.html
+++ b/source/activity-discussions.html
@@ -17,8 +17,8 @@
       <div class="activity-tabs">
 
         <ul class="activity-tabs__list">
-          <li class="activity-tabs__item">
-            <a href="#" class="activity-tabs__link activity-tabs__link--active">Обсуждения</a>
+          <li class="activity-tabs__item activity-tabs__item--active">
+            <a href="#" class="activity-tabs__link">Обсуждения</a>
           </li>
           <li class="activity-tabs__item">
             <a href="activity-projects.html" class="activity-tabs__link">Проекты</a>
