--- a/source/activity-surveys.html
+++ b/source/activity-surveys.html
@@ -23,8 +23,8 @@
           <li class="activity-tabs__item">
             <a href="activity-projects.html" class="activity-tabs__link">Проекты</a>
           </li>
-          <li class="activity-tabs__item">
-            <a href="#" class="activity-tabs__link activity-tabs__link--active">Опросы</a>
+          <li class="activity-tabs__item activity-tabs__item--active">
+            <a href="#" class="activity-tabs__link">Опросы</a>
           </li>
           <li class="activity-tabs__item">
             <a href="activity-partners.html" class="activity-tabs__link">На сторонних ресурсах</a>
