--- a/source/project-page.html
+++ b/source/project-page.html
@@ -246,10 +246,10 @@
 
             <h2>Изображения из стандартных полей</h2>
 
-            <div class="project-page__gallery gallery swiper-container">
+            <div class="project-page__gallery gallery js-gallery swiper-container">
               <div class="gallery__tape swiper-wrapper">
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/1.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Описание, текст до 500 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст- заполнитель или. Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста-заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, во всех.</figcaption>
@@ -258,7 +258,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/2.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</figcaption>
@@ -267,7 +267,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/1.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Описание, текст до 500 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст- заполнитель или. Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста-заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, во всех.</figcaption>
@@ -276,7 +276,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/2.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</figcaption>
@@ -285,7 +285,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/1.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Описание, текст до 500 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст- заполнитель или. Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста-заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, во всех.</figcaption>
@@ -294,7 +294,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/2.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</figcaption>
@@ -406,10 +406,10 @@
 
             <h2>Изображения из дополнительных полей. Заголовок приходит из API</h2>
 
-            <div class="project-page__gallery gallery swiper-container">
+            <div class="project-page__gallery gallery js-gallery swiper-container">
               <div class="gallery__tape swiper-wrapper">
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/1.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Описание, текст до 500 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст- заполнитель или. Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста-заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, во всех.</figcaption>
@@ -418,7 +418,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/2.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</figcaption>
@@ -427,7 +427,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/1.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Описание, текст до 500 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст- заполнитель или. Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста-заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, во всех.</figcaption>
@@ -436,7 +436,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/2.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</figcaption>
@@ -445,7 +445,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/1.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/1.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Описание, текст до 500 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст- заполнитель или. Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста-заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, во всех.</figcaption>
@@ -454,7 +454,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a class="gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
+                  <a class="gallery__item-link js-gallery__item-link" href="img/img-project/2.jpg" target="_blank" aria-label="описание картинки">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img" src="img/img-project/2.jpg" alt="описание картинки">
                       <figcaption class="gallery__item-text">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</figcaption>
