--- a/source/activity-projects.html
+++ b/source/activity-projects.html
@@ -91,7 +91,7 @@
           </article>
 
           <article class="project-item project-item--disabled">
-            <a class="project-item__link">
+            <a class="project-item__link" href="#">
               <h2 class="project-item__title">Возрождение вечерних школ</h2>
 
               <p class="project-item__expire">
@@ -181,7 +181,7 @@
           </article>
 
           <article class="project-item project-item--disabled">
-            <a class="project-item__link">
+            <a class="project-item__link" href="#">
               <h2 class="project-item__title">Возрождение вечерних школ</h2>
 
               <p class="project-item__expire">
@@ -271,7 +271,7 @@
           </article>
 
           <article class="project-item project-item--disabled">
-            <a class="project-item__link">
+            <a class="project-item__link" href="#">
               <h2 class="project-item__title">Возрождение вечерних школ</h2>
 
               <p class="project-item__expire">
